--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+}
+
+repositories {
+    mavenCentral()
 }
